Wed Mar  2 16:18:30 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (vm_call0_body): calling method_missing method is
	  method_missing().

Wed Mar  2 15:13:33 2016  herwinw  <herwin@quarantainenet.nl>

	* lib/xmlrpc.rb: Removed broken parser named XMLScanStreamParser.
	  It's not works with current Ruby version.
	  [fix GH-1271][ruby-core:59588][Bug #9369]
	* lib/xmlrpc/config.rb: ditto.
	* lib/xmlrpc/parser.rb: ditto.

Wed Mar  2 15:08:33 2016  herwinw  <herwin@quarantainenet.nl>

	* lib/xmlrpc.rb: Removed broken parser named XMLTreeParser.
	  Required gem of its parser didn't compile on newer Ruby versions.
	  [fix GH-1271][ruby-core:59590][Bug #9370]
	* lib/xmlrpc/config.rb: ditto.
	* lib/xmlrpc/parser.rb: ditto.

Tue Mar  1 11:25:48 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/fileutils.rb: use keyword arguments instead of option
	  hashes.

Mon Feb 29 16:50:20 2016  hanachin  <hanachin@gmail.com>

	* array.c (rb_ary_push_m): [DOC] Remove trailing comma from
	  Array#push example, as other Array examples doesn't put trailing
	  comma.  [Fix GH-1279]

Mon Feb 29 16:31:01 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk, tool/mkconfig.rb: set cross_compiling option from
	  Makefile, but not from rbconfig.rb, which is just going to be
	  created by this command.

Sun Feb 28 23:13:49 2016  C.J. Collier  <cjcollier@linuxfoundation.org>

	* configure.in: Add summary to end of configure output.
	  [Fix GH-1275]

Sun Feb 28 20:23:36 2016  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/drb/drb.rb (error_print): Add verbose failure messages and
	  avoid infamous DRb::DRbConnError. [Feature #12101]

Sun Feb 28 13:40:46 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* error.c (nometh_err_initialize): add private_call? parameter.

	* error.c (nometh_err_private_call_p): add private_call? method,
	  to tell if the exception raised in private form FCALL or VCALL.
	  [Feature #12043]
